Remove excess logging (#307)